# xtream-ai-assignment-developer

./: README.md  collect_metrics.py  dvc.yaml  params.yaml  prepare_data.py  pyproject.toml  train_models.py  tune_params.py
.dvc/: config
