[tool.poetry]
name = "xtream assignment"
version = "0.1.0"
description = "xtream AI Challenge - Software Engineer"
authors = ["Matteo Brivio"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
numpy = "^1.26.2"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
tqdm = "^4.66.1"
matplotlib = "^3.8.2"
mypy = "^1.8.0"
black = {extras = ["jupyter"], version = "^24.1.1"}
plotly = "^5.22.0"
xgboost = "^2.1.0"
optuna = "^3.6.1"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
ipykernel = "^6.27.1"
notebook = "^7.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
