[tool.poetry]
name = "xtream assignment"
version = "0.1.0"
description = "xtream AI Challenge - Software Engineer"
authors = ["Matteo Brivio"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
tqdm = "^4.66.1"
matplotlib = "^3.8.2"
mypy = "^1.8.0"
black = {extras = ["jupyter"], version = "^24.1.1"}
plotly = "^5.22.0"
xgboost = "^2.1.0"
optuna = "^3.6.1"
dvc = "^3.51.2"
typer = "^0.12.3"
isort = "^5.13.2"
dvclive = "^3.46.1"
pandera = "^0.19.3"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
ipykernel = "^6.27.1"
notebook = "^7.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
